# custom-rl-practice

./: .gitignore  README.md  pyproject.toml
custom_rl_jax/: blackjack.py  blackjack_human.py  blackjack_print.py  heatmap.py  k_armed_bandit.py  q_table.npy  q_visits.npy  supervised.ipynb
custom_rl_jax/ann_temporal_difference/: ann_sarsa.py
custom_rl_jax/enviroments/: encoding.py  simple_gridworld.py  simple_gridworld_render.py
custom_rl_jax/enviroments/gridworld/: frozen_lake.py
custom_rl_jax/environments/: train.py  vectorized.py
custom_rl_jax/jax_tests/: test.py
custom_rl_jax/monte_carlo/: blackjack_off_policy.py  blackjack_on_policy.py  blackjack_print.py
custom_rl_jax/networks/: activation.py  actor_critic_model.py  mlp.py
custom_rl_jax/nstep_temporal_difference/: nstep_sarsa.py  policy.py  test_nstep.py  tree_backup.py
custom_rl_jax/policy_gradient/: actor_critic.py  actor_critic_v2.py  actor_critic_v3.py  analysis.py  enjoy.py  train.py  types.py  view_policy.py
custom_rl_jax/temporal_difference/: double_q_learning.py  expected_sarsa.py  hyper_parameter_search.py  hyper_params.py  q_learning.py  sarsa.py
custom_rl_jax/vec_policy_gradient_cs/: actor_critic.py  cost_analysis.py  enjoy.py  initialize.py  metrics_recorder.py  param_search.py  regularization.py  run_settings.py  train_gymnax.py
custom_rl_jax/vectorized_policy_gradient/: actor_critic_v3.py  analysis.py  initialize.py  param_search.py  settings.py  train.py
old/a2c_run2/: params.txt
old/first_actor_critic_run/: hyper_parameters.txt
(+7 files in other folders)
